crates/test-files/fixtures/compile_errors/ctx_missing_create.fe
use std::context::Context

contract Foo:
    pub fn bar():
        pass

contract Bar:
    pub fn create_foo(ctx: Context):
        Foo.create(0)
